--- a/mvc/composer.json
+++ b/mvc/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "web3013/mvc",
     "require": {
-        "illuminate/database": "^8.7",
-        "illuminate/events": "^8.7",
-        "jenssegers/blade": "^1.4"
+        "illuminate/database": "*",
+        "illuminate/events": "*",
+        "jenssegers/blade": "*"
     },
     "autoload": {
         "psr-4": {
